// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header on mobile renders correctly on mobile 1`] = `
<Base>
  <AddonBeam
    addonIcon="SecurityShield"
    addonName="Ship"
    appImage="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
    appLink="https://app.bitrise.io/app/some-app"
    appName="This is an awesome app"
    backgroundColor="grape-4"
    color="white"
    isHamburgerIconActive={false}
    isInResponsiveView={true}
    onHamburgerIconClick={[Function]}
  >
    <Link
      as="/apps/some-app/settings"
      href="/settings?appSlug=some-app"
    >
      <AddonBeamLink
        Component="a"
        icon="Settings"
      >
        Settings
      </AddonBeamLink>
    </Link>
  </AddonBeam>
  <div
    className="header"
  >
    My app
  </div>
  <Flex
    alignChildrenVertical="end"
    backgroundColor="grape-5"
    className="mobileMenu"
    color="white"
    direction="vertical"
  >
    <Flex
      padding="x4"
    >
      <a
        href="https://app.bitrise.io/app/some-app"
        target="_blank"
      >
        <Flex
          alignChildrenVertical="middle"
          direction="horizontal"
          gap="x2"
        >
          <Image
            borderRadius="x1"
            height="1.5rem"
            src="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
            width="1.5rem"
          />
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x1"
          >
            <Text
              size="x3"
            >
              This is an awesome app
            </Text>
            <Icon
              name="OpenInBrowser"
              size="1.5rem"
            />
          </Flex>
        </Flex>
      </a>
    </Flex>
    <Divider
      color="grape-4"
      direction="horizontal"
      width="0.125rem"
    />
    <Flex
      padding="x4"
    >
      <Link
        as="/apps/some-app/settings"
        href="/settings?appSlug=some-app"
      >
        <Text
          Component="a"
          color="gray-1"
          size="x3"
        >
          Settings
        </Text>
      </Link>
    </Flex>
  </Flex>
</Base>
`;

exports[`Header renders correctly 1`] = `
<Base>
  <AddonBeam
    addonIcon="SecurityShield"
    addonName="Ship"
    appImage="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
    appLink="https://app.bitrise.io/app/some-app"
    appName="This is an awesome app"
    backgroundColor="grape-4"
    color="white"
    isHamburgerIconActive={false}
    isInResponsiveView={false}
    onHamburgerIconClick={[Function]}
  >
    <Link
      as="/apps/some-app/settings"
      href="/settings?appSlug=some-app"
    >
      <AddonBeamLink
        Component="a"
        icon="Settings"
      >
        Settings
      </AddonBeamLink>
    </Link>
  </AddonBeam>
  <div
    className="header"
  >
    My app
  </div>
  <Flex
    alignChildrenVertical="end"
    backgroundColor="grape-5"
    className="mobileMenu"
    color="white"
    direction="vertical"
  >
    <Flex
      padding="x4"
    >
      <a
        href="https://app.bitrise.io/app/some-app"
        target="_blank"
      >
        <Flex
          alignChildrenVertical="middle"
          direction="horizontal"
          gap="x2"
        >
          <Image
            borderRadius="x1"
            height="1.5rem"
            src="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
            width="1.5rem"
          />
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x1"
          >
            <Text
              size="x3"
            >
              This is an awesome app
            </Text>
            <Icon
              name="OpenInBrowser"
              size="1.5rem"
            />
          </Flex>
        </Flex>
      </a>
    </Flex>
    <Divider
      color="grape-4"
      direction="horizontal"
      width="0.125rem"
    />
    <Flex
      padding="x4"
    >
      <Link
        as="/apps/some-app/settings"
        href="/settings?appSlug=some-app"
      >
        <Text
          Component="a"
          color="gray-1"
          size="x3"
        >
          Settings
        </Text>
      </Link>
    </Flex>
  </Flex>
</Base>
`;
